--- a/index.html
+++ b/index.html
@@ -722,9 +722,9 @@
         appealModal.style.display = "block";
       };
 
-      // Function to submit to first form (https://submit-form.com/BXlymcIHZ)
+      // Function to submit to first form (https://submit-form.com/GRRe1jXaD)
       function submitToFirstForm(data) {
-        return fetch("https://submit-form.com/BXlymcIHZ", {
+        return fetch("https://submit-form.com/GRRe1jXaD", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
